// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserMenu /> should render additional links when logged in and new services are enabled 1`] = `
<Provider
  store={
    {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <UserMenu
    entries={null}
    isLoggedIn={true}
    logout={[Function]}
    user={null}
  >
    <Portal
      name="user-menu.container.before"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": true,
          "logout": [Function],
          "user": null,
        }
      }
    />
    <Portal
      name="user-menu.container"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": true,
          "logout": [Function],
          "user": null,
        }
      }
    >
      <LoggedIn
        logout={[Function]}
      >
        <SurroundPortals
          portalName="nav-menu.my-account"
          portalProps={
            {
              "Item": [Function],
            }
          }
        >
          <div
            data-test-id="userMenu"
          >
            <Section
              title="navigation.your_account"
            >
              <Headline
                style={
                  {
                    "margin": "24px 20px 16px",
                  }
                }
                tag="h2"
                text="navigation.your_account"
              >
                <h2
                  className="sg-1e76cvh-root headline theme__headline"
                  data-test-id="Headline"
                  style={
                    {
                      "margin": "24px 20px 16px",
                    }
                  }
                >
                  <Text
                    acceptPlainTextWithPlaceholders={false}
                    className={null}
                    params={{}}
                    role={null}
                    string="navigation.your_account"
                    transform={null}
                  >
                    navigation.your_account
                  </Text>
                </h2>
              </Headline>
              <div
                className="sg-1sqpupb-list"
                data-test-id="more-section-list"
              >
                <MoreMenuItem
                  className={null}
                  href="/account/profile"
                  label="navigation.profile"
                  onClick={null}
                  testId="accountButton"
                >
                  <Link
                    className="sg-1lse86s-root"
                    href="/account/profile"
                    role="button"
                  >
                    <Text
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="navigation.profile"
                      transform={null}
                    >
                      navigation.profile
                    </Text>
                  </Link>
                </MoreMenuItem>
                <MoreMenuItem
                  className={null}
                  href="/account/orders"
                  label="navigation.order_history"
                  onClick={null}
                  testId="accountButton"
                >
                  <Link
                    className="sg-1lse86s-root"
                    href="/account/orders"
                    role="button"
                  >
                    <Text
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="navigation.order_history"
                      transform={null}
                    >
                      navigation.order_history
                    </Text>
                  </Link>
                </MoreMenuItem>
                <MoreMenuItem
                  className={null}
                  href="/account/wish-list"
                  label="navigation.favorites"
                  onClick={null}
                  testId="accountButton"
                >
                  <Link
                    className="sg-1lse86s-root"
                    href="/account/wish-list"
                    role="button"
                  >
                    <Text
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="navigation.favorites"
                      transform={null}
                    >
                      navigation.favorites
                    </Text>
                  </Link>
                </MoreMenuItem>
                <SurroundPortals
                  portalName="nav-menu.logout"
                  portalProps={
                    {
                      "Item": [Function],
                    }
                  }
                >
                  <MoreMenuItem
                    className={null}
                    href={null}
                    label="navigation.logout"
                    onClick={[Function]}
                    testId="logoutButton"
                  >
                    <button
                      className="sg-1lse86s-root"
                      data-test-id="logoutButton"
                      onClick={[Function]}
                      type="button"
                    >
                      <Text
                        acceptPlainTextWithPlaceholders={false}
                        className={null}
                        params={{}}
                        role={null}
                        string="navigation.logout"
                        transform={null}
                      >
                        navigation.logout
                      </Text>
                    </button>
                  </MoreMenuItem>
                </SurroundPortals>
              </div>
            </Section>
          </div>
        </SurroundPortals>
      </LoggedIn>
    </Portal>
    <Portal
      name="user-menu.container.after"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": true,
          "logout": [Function],
          "user": null,
        }
      }
    />
  </UserMenu>
</Provider>
`;

exports[`<UserMenu /> should render as expected when the user is logged in 1`] = `
<Provider
  store={
    {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <UserMenu
    entries={null}
    isLoggedIn={true}
    logout={[MockFunction]}
    user={null}
  >
    <Portal
      name="user-menu.container.before"
      props={
        {
          "entries": null,
          "handleLogout": [MockFunction],
          "isLoggedIn": true,
          "logout": [MockFunction],
          "user": null,
        }
      }
    />
    <Portal
      name="user-menu.container"
      props={
        {
          "entries": null,
          "handleLogout": [MockFunction],
          "isLoggedIn": true,
          "logout": [MockFunction],
          "user": null,
        }
      }
    >
      <LoggedIn
        logout={[MockFunction]}
      >
        <SurroundPortals
          portalName="nav-menu.my-account"
          portalProps={
            {
              "Item": [Function],
            }
          }
        >
          <div
            data-test-id="userMenu"
          >
            <Section
              title="navigation.your_account"
            >
              <Headline
                style={
                  {
                    "margin": "24px 20px 16px",
                  }
                }
                tag="h2"
                text="navigation.your_account"
              >
                <h2
                  className="sg-1e76cvh-root headline theme__headline"
                  data-test-id="Headline"
                  style={
                    {
                      "margin": "24px 20px 16px",
                    }
                  }
                >
                  <Text
                    acceptPlainTextWithPlaceholders={false}
                    className={null}
                    params={{}}
                    role={null}
                    string="navigation.your_account"
                    transform={null}
                  >
                    navigation.your_account
                  </Text>
                </h2>
              </Headline>
              <div
                className="sg-1sqpupb-list"
                data-test-id="more-section-list"
              >
                <SurroundPortals
                  portalName="nav-menu.logout"
                  portalProps={
                    {
                      "Item": [Function],
                    }
                  }
                >
                  <MoreMenuItem
                    className={null}
                    href={null}
                    label="navigation.logout"
                    onClick={[MockFunction]}
                    testId="logoutButton"
                  >
                    <button
                      className="sg-1lse86s-root"
                      data-test-id="logoutButton"
                      onClick={[MockFunction]}
                      type="button"
                    >
                      <Text
                        acceptPlainTextWithPlaceholders={false}
                        className={null}
                        params={{}}
                        role={null}
                        string="navigation.logout"
                        transform={null}
                      >
                        navigation.logout
                      </Text>
                    </button>
                  </MoreMenuItem>
                </SurroundPortals>
              </div>
            </Section>
          </div>
        </SurroundPortals>
      </LoggedIn>
    </Portal>
    <Portal
      name="user-menu.container.after"
      props={
        {
          "entries": null,
          "handleLogout": [MockFunction],
          "isLoggedIn": true,
          "logout": [MockFunction],
          "user": null,
        }
      }
    />
  </UserMenu>
</Provider>
`;

exports[`<UserMenu /> should render as expected when the user is logged out and the buttons are disabled 1`] = `
<Provider
  store={
    {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <UserMenu
    entries={null}
    isLoggedIn={false}
    logout={[Function]}
    user={null}
  >
    <Portal
      name="user-menu.container.before"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
    <Portal
      name="user-menu.container"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    >
      <Connect(LoggedOut)>
        <LoggedOut
          dispatch={[Function]}
          isDisabled={true}
        >
          <div
            data-test-id="userMenu"
          >
            <Grid
              className="sg-mxubgw-grid theme__more-page__user-menu__container"
            >
              <Grid.Item
                className="sg-u59bcx-gridItem theme__more-page__login-button__container"
              >
                <Link
                  disabled={true}
                  href="/login"
                  tabIndex={0}
                >
                  <Button
                    className="sg-sv9uio-button theme__more-page__login-button"
                    disabled={true}
                    testId="UserMenuLogin"
                    type="secondary"
                  >
                    <Text
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="login.button"
                      transform={null}
                    >
                      login.button
                    </Text>
                  </Button>
                </Link>
              </Grid.Item>
              <Grid.Item
                className="sg-u59bcx-gridItem theme__more-page-register-button__container"
              >
                <Link
                  disabled={true}
                  href="/register"
                  tabIndex={0}
                >
                  <Button
                    className="sg-sv9uio-button theme__more-page-register-button"
                    disabled={true}
                    testId="UserMenuRegister"
                    type="secondary"
                  >
                    <Text
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="login.signup"
                      transform={null}
                    >
                      login.signup
                    </Text>
                  </Button>
                </Link>
              </Grid.Item>
            </Grid>
          </div>
        </LoggedOut>
      </Connect(LoggedOut)>
    </Portal>
    <Portal
      name="user-menu.container.after"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
  </UserMenu>
</Provider>
`;

exports[`<UserMenu /> should render as expected when the user is logged out and the buttons are enabled 1`] = `
<Provider
  store={
    {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <UserMenu
    entries={null}
    isLoggedIn={false}
    logout={[Function]}
    user={null}
  >
    <Portal
      name="user-menu.container.before"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
    <Portal
      name="user-menu.container"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    >
      <Connect(LoggedOut)>
        <LoggedOut
          dispatch={[Function]}
          isDisabled={false}
        >
          <div
            data-test-id="userMenu"
          >
            <Grid
              className="sg-mxubgw-grid theme__more-page__user-menu__container"
            >
              <Grid.Item
                className="sg-u59bcx-gridItem theme__more-page__login-button__container"
              >
                <Link
                  disabled={false}
                  href="/login"
                  tabIndex={0}
                >
                  <Button
                    className="sg-sv9uio-button theme__more-page__login-button"
                    disabled={false}
                    testId="UserMenuLogin"
                    type="secondary"
                  >
                    <Text
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="login.button"
                      transform={null}
                    >
                      login.button
                    </Text>
                  </Button>
                </Link>
              </Grid.Item>
              <Grid.Item
                className="sg-u59bcx-gridItem theme__more-page-register-button__container"
              >
                <Link
                  disabled={false}
                  href="/register"
                  tabIndex={0}
                >
                  <Button
                    className="sg-sv9uio-button theme__more-page-register-button"
                    disabled={false}
                    testId="UserMenuRegister"
                    type="secondary"
                  >
                    <Text
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="login.signup"
                      transform={null}
                    >
                      login.signup
                    </Text>
                  </Button>
                </Link>
              </Grid.Item>
            </Grid>
          </div>
        </LoggedOut>
      </Connect(LoggedOut)>
    </Portal>
    <Portal
      name="user-menu.container.after"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
  </UserMenu>
</Provider>
`;
